--- a/stroud/index.html
+++ b/stroud/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>PersonalTutor</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-32">
 		<script language="javascript" src="sys/engMathsPT_core.js"></script>
 		<link rel="stylesheet" type="text/css" href="sys/engMathsPT_core.css">
 		<base target="ayg" />
