--- a/game/tanksim/index.html
+++ b/game/tanksim/index.html
@@ -9,7 +9,11 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   </head>
   <body>
-    <script src="sketch.js"></script>
-	
+    <script src="random.mjs"></script>
+    <script src="tanksim.mjs"></script>
+    <script src="ssentity.mjs"></script>
+    <script src="tankmodel.mjs"></script>
+    <script src="sketch.mjs"></script>
+    
   </body>
 </html>
