--- a/apps/blzr/errandx/index.html
+++ b/apps/blzr/errandx/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>blzr</title>
-    <base href="/" />
+    <base href="/apps/blzr/errandx" />
     <!-- <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" /> -->
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <!-- <link href="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.css" rel="stylesheet">
