--- a/apps/blzr/errandx/index.html
+++ b/apps/blzr/errandx/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>blzr</title>
     <base href="/apps/blzr/errandx/" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; font-src 'self' https://softtouchsolutions.github.io;">
     <!-- <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" /> -->
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+    <!-- <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"> -->
     <!-- <link href="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.js"></script> -->
     <link rel="stylesheet" href="css/app.css" />
