--- a/apps/blzr/errandx/index.html
+++ b/apps/blzr/errandx/index.html
@@ -12,7 +12,7 @@
     <!-- <link href="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.js"></script> -->
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="img/cc.png" />
     <link href="blzr.styles.css" rel="stylesheet" />
     <!-- <style>
         body { margin: 0; padding: 0; }
