--- a/apps/blzr/errandx/index.html
+++ b/apps/blzr/errandx/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>blzr</title>
     <base href="/apps/blzr/errandx/" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; font-src 'self' data:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; connect-src 'self';">
     <!-- <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" /> -->
     <!-- <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"> -->
     <!-- <link href="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.css" rel="stylesheet">
