--- a/apps/blzr/errandx/index.html
+++ b/apps/blzr/errandx/index.html
@@ -45,6 +45,6 @@
         <a class="dismiss">🗙</a>
     </div> -->
     <script src="_framework/blazor.webassembly.js"></script>
-</body>
+    <script src="js/CookieStorageAccessor.js"></script></body>
 
 </html>
