--- a/apps/game/olct/fb00.html
+++ b/apps/game/olct/fb00.html
@@ -10,6 +10,6 @@
 <body>
   <canvas id="canvas1"></canvas>
   <script  src="global.js" defer></script>
-  <script type="module" src="#fb00.js" defer></script>
+  <script type="module" src="fb00.js" defer></script>
 </body>
 </html>
