--- a/apps/game/olct/fb00.html
+++ b/apps/game/olct/fb00.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; connect-src 'self';">
   <title>OLCX</title>
   <link rel="stylesheet" href="styles.css">
     <!-- Add an empty favicon link -->
