Update gfx00.html. Fix renderer.setClearColorHex

--- a/apps/game/olct/gfx00.html
+++ b/apps/game/olct/gfx00.html
@@ -33,7 +33,7 @@ var scene = new THREE.Scene();
                              , window.innerWidth / window.innerHeight 
                              , 0.1, 1000);
 var renderer = new THREE.WebGLRenderer();
-        renderer.setClearColorHex(0xEEEEEE);
+        renderer.setClearColor(0xEEEEEE);
         renderer.setSize(window.innerWidth, window.innerHeight);
 
         var axes = new THREE.AxisHelper( 20 );
