--- a/apps/game/olct/gfx00.html
+++ b/apps/game/olct/gfx00.html
@@ -51,7 +51,7 @@ var renderer = new THREE.WebGLRenderer();
 
         scene.add(plane);
 
-        var cubeGeometry = new THREE.CubeGeometry(4,4,4);
+        var cubeGeometry = new THREE.BoxGeometry(4,4,4);
         var cubeMaterial = new THREE.MeshBasicMaterial(
                           {color: 0xff0000, wireframe: true});
         var cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
