--- a/apps/songs/index.html
+++ b/apps/songs/index.html
@@ -94,6 +94,28 @@
             <ul data-role="listview" data-inset="true">
                 <li><a href="#youwatch" data-transition="slide">Watch Youtube Video</a></li>
             </ul>
+            <div class="ui-grid-b ui-responsive">
+                <div class="ui-block-a ui-grid-c">                
+                    <div class="ui-block-a"><a href="#" class="ui-btn ui-shadow ui-corner-all">Ab</a></div>
+                    <div class="ui-block-b"><a href="#" class="ui-btn ui-shadow ui-corner-all">A</a></div>
+                    <div class="ui-block-c"><a href="#" class="ui-btn ui-shadow ui-corner-all">A#</a></div>
+                    <div class="ui-block-d"><a href="#" class="ui-btn ui-shadow ui-corner-all">B</a></div>
+                </div>
+                <div class="ui-block-b ui-grid-c">                
+                    <div class="ui-block-a"><a href="#" class="ui-btn ui-shadow ui-corner-all">C</a></div>
+                    <div class="ui-block-b"><a href="#" class="ui-btn ui-shadow ui-corner-all">C#</a></div>
+                    <div class="ui-block-c"><a href="#" class="ui-btn ui-shadow ui-corner-all">D</a></div>
+                    <div class="ui-block-d"><a href="#" class="ui-btn ui-shadow ui-corner-all">Eb</a></div>
+                </div>
+                <div class="ui-block-c ui-grid-c">                
+                    <div class="ui-block-a"><a href="#" class="ui-btn ui-shadow ui-corner-all">E</a></div>
+                    <div class="ui-block-b"><a href="#" class="ui-btn ui-shadow ui-corner-all">F</a></div>
+                    <div class="ui-block-c"><a href="#" class="ui-btn ui-shadow ui-corner-all">F#</a></div>
+                    <div class="ui-block-d"><a href="#" class="ui-btn ui-shadow ui-corner-all">G</a></div>
+                </div>
+
+            </div>
+                
             <textarea rows="4" cols="50" data-bind="value:lyrics, event: { onkeyup: chkSave }"></textarea>
             <button type="button" data-bind="click:save">Update</button>
             <!--pre data-bind="text: lyrics" ></pre-->
