--- a/apps/songs/index.html
+++ b/apps/songs/index.html
@@ -42,7 +42,7 @@
 <div data-role="page" id="home">
 
 	<div data-role="header">
-		<h1>HC Choir Songs</h1>
+		<h1><a href="https://cloud.mongodb.com/v2/5be2f6adf2a30b51f25fa73f#/metrics/replicaSet/6739f2d624739768fd96a447/explorer/Personal/Songs/find" data-transition="slide">HC Choir Songs</a></h1>
         <div class="loader" data-bind="visible:show_loader">
           <span class="l-1"></span>
           <span class="l-2"></span>
