--- a/apps/songs/index.html
+++ b/apps/songs/index.html
@@ -98,20 +98,20 @@
             <div class="ui-grid-b ui-responsive">
                 <div class="ui-block-a ui-grid-c">                
                     <div class="ui-block-a"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('Ab')}">Ab</a></div>
-                    <div class="ui-block-b"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('Ab')}">A</a></div>
-                    <div class="ui-block-c"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('Ab')}">A#</a></div>
-                    <div class="ui-block-d"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('Ab')}">B</a></div>
+                    <div class="ui-block-b"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('A')}">A</a></div>
+                    <div class="ui-block-c"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('A#')}">A#</a></div>
+                    <div class="ui-block-d"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('B')}">B</a></div>
                 </div>
                 <div class="ui-block-b ui-grid-c">                
-                    <div class="ui-block-a"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('G')}">C</a></div>
-                    <div class="ui-block-b"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('G')}">C#</a></div>
-                    <div class="ui-block-c"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('G')}">D</a></div>
-                    <div class="ui-block-d"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('G')}">Eb</a></div>
+                    <div class="ui-block-a"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('C')}">C</a></div>
+                    <div class="ui-block-b"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('C#')}">C#</a></div>
+                    <div class="ui-block-c"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('D')}">D</a></div>
+                    <div class="ui-block-d"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('Eb')}">Eb</a></div>
                 </div>
                 <div class="ui-block-c ui-grid-c">                
-                    <div class="ui-block-a"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('G')}">E</a></div>
-                    <div class="ui-block-b"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('G')}">F</a></div>
-                    <div class="ui-block-c"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('G')}">F#</a></div>
+                    <div class="ui-block-a"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('E')}">E</a></div>
+                    <div class="ui-block-b"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('F')}">F</a></div>
+                    <div class="ui-block-c"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('F#')}">F#</a></div>
                     <div class="ui-block-d"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('G')}">G</a></div>
                 </div>
 
