Fix music key ommissions

--- a/apps/songs/index.html
+++ b/apps/songs/index.html
@@ -99,7 +99,7 @@
                 <div class="ui-block-a ui-grid-c">                
                     <div class="ui-block-a"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('Ab')}">Ab</a></div>
                     <div class="ui-block-b"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('A')}">A</a></div>
-                    <div class="ui-block-c"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('A#')}">A#</a></div>
+                    <div class="ui-block-c"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('Bb')}">Bb</a></div>
                     <div class="ui-block-d"><a href="#" class="ui-btn ui-shadow ui-corner-all" data-bind="event:{mouseup:transpose('B')}">B</a></div>
                 </div>
                 <div class="ui-block-b ui-grid-c">                
