show the scores

--- a/apps/songs/index.html
+++ b/apps/songs/index.html
@@ -119,7 +119,20 @@
                 
             <textarea rows="4" cols="50" data-bind="value:lyrics, event: { onkeyup: chkSave }"></textarea>
             <button type="button" data-bind="click:save">Update</button>
-            <!--pre data-bind="text: lyrics" ></pre-->
+            <pre >
+['C',  'Dm',  'Em',  'F',  'G',  'Am',  'Bdim' ]
+['C#', 'D#m', 'Fm' , 'F#', 'G#', 'A#m', 'Bdim' ]
+['D',  'Em',  'F#m', 'G',  'A',  'Bm',  'C#dim'] 
+['D#', 'Fm',  'Gm',  'G#', 'A#', 'Cm',  'Ddim' ]
+['E',  'F#m', 'G#m', 'A' , 'B',  'C#m', 'D#dim']
+['F',  'Gm',  'Am',  'Bb', 'C',  'Dm',  'Edim' ] 
+['F#', 'G#m', 'A#m ','B',  'C#', 'D#m', 'Fdim' ]
+['G',  'Am',  'Bm',  'C',  'D',  'Em',  'F#dim'] 
+['G#', 'A#m', 'Bm' , 'C#', 'D#', 'Fm',  'Gdim' ]
+['A',  'Bm',  'C#m', 'D',  'E',  'F#m', 'G#dim']
+['A#', 'Cm',  'Dm',  'D#', 'F',  'Gm',  'Adim' ]
+['B',  'C#m', 'D#m', 'E',  'F#', 'G#m', 'A#dim']
+            </pre>
             <!--div data-bind="text: lyrics2" ></div-->
         
 	</div><!-- /content -->
