--- a/apps/songs/index.html
+++ b/apps/songs/index.html
@@ -119,6 +119,9 @@
                 
             <textarea rows="4" cols="50" data-bind="value:lyrics, event: { onkeyup: chkSave }"></textarea>
             <button type="button" data-bind="click:save">Update</button>
+            <div>
+                <img src="images/fret_map2.webp"/>
+            </div>
             <pre >
 ['C',  'Dm',  'Em',  'F',  'G',  'Am',  'Bdim' ]
 ['C#', 'D#m', 'Fm' , 'F#', 'G#', 'A#m', 'Bdim' ]
@@ -134,7 +137,6 @@
 ['B',  'C#m', 'D#m', 'E',  'F#', 'G#m', 'A#dim']
             </pre>
             <!--div data-bind="text: lyrics2" ></div-->
-        
 	</div><!-- /content -->
 </div>
 <!-- /ko  -->
