--- a/apps/songs/index.html
+++ b/apps/songs/index.html
@@ -136,6 +136,9 @@
 ['A#', 'Cm',  'Dm',  'D#', 'F',  'Gm',  'Adim' ]
 ['B',  'C#m', 'D#m', 'E',  'F#', 'G#m', 'A#dim']
             </pre>
+            <div>
+                <img src="images/fretmap.png"/>
+            </div>
             <!--div data-bind="text: lyrics2" ></div-->
 	</div><!-- /content -->
 </div>
