--- a/apps/game/cartest/index.html
+++ b/apps/game/cartest/index.html
@@ -3,9 +3,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Car Test</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="cartest.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="script.js"></script>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/controls/OrbitControls.js"></script>
@@ -77,6 +76,7 @@
       <div id="youtube-card">
         Learn Three.js while building this game on YouTube
       </div>
+      <script src="cartest.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/libs/stats.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/libs/dat.gui.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/libs/inflate.min.js"></script>
