--- a/apps/game/cartest/index.html
+++ b/apps/game/cartest/index.html
@@ -77,12 +77,12 @@
         Learn Three.js while building this game on YouTube
       </div>
       <script src="cartest.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/libs/stats.min.js"></script>
+      <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/libs/stats.min.js"></script> -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/libs/dat.gui.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/libs/inflate.min.js"></script>
+      <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/libs/inflate.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/libs/tween.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/libs/ammo.wasm.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/libs/earcut.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/libs/earcut.min.js"></script> -->
   </div>
   </body>
 </html>
